chore: upgrade to Java 21
Closes: MSEARCH-969